--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -68,7 +68,7 @@ jobs:
       K8S_VERSION: v1.27.3
       KIND_VERSION: v0.20.0
       DAPR_TEST_CONFIG_STORE: postgres
-      ACTORS_VERSION: ${{ matrix.actors }}
+      ACTORS_TYPE: ${{ matrix.actors }}
     strategy:
       fail-fast: false # Keep running if one leg fails.
       matrix:
@@ -76,8 +76,8 @@ jobs:
         # This is attempting to make it a bit clearer what's being tested.
         # See: https://github.com/kubernetes-sigs/kind/releases/tag/v0.11.1
         include:
-        - actors: v1
-        - actors: v2
+        - actors: oss
+        - actors: emmy
     steps:
     - name: Check out code
       uses: actions/checkout@v4
@@ -188,12 +188,12 @@ jobs:
     - name: Setup Dapr
       run: |
         export HA_MODE=false
-        if [[ "${{ matrix.actors }}" == "v2" ]]; then
+        if [[ "${{ matrix.actors }}" == "emmy" ]]; then
           # These values are valid for the Postgres deployed by the Dapr tests
           echo -n "connectionString=host=dapr-postgres-postgresql.${DAPR_NAMESPACE}.svc.cluster.local user=postgres password=example port=5432 connect_timeout=10 database=dapr_test" > postgres
           kubectl create secret generic postgres-actors -n ${DAPR_NAMESPACE} --from-file=postgres
   
-          export ADDITIONAL_HELM_SET="global.actors.v2=true,dapr_actors.logLevel=debug,dapr_actors.store.name=postgresql,dapr_actors.store.optionsFile.secretName=postgres-actors,dapr_actors.store.optionsFile.secretKey=postgres"
+          export ADDITIONAL_HELM_SET="global.actors.serviceName=emmy,global.reminders.serviceName=emmy,dapr_emmy.logLevel=debug,dapr_emmy.store.name=postgresql,dapr_emmy.store.optionsFile.secretName=postgres-actors,dapr_emmy.store.optionsFile.secretKey=postgres"
         fi
         make docker-deploy-k8s
 
