--- a/charts/dapr/charts/dapr_emmy/Chart.yaml
+++ b/charts/dapr/charts/dapr_emmy/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for Dapr Actors service.
-name: dapr_actors
+description: A Helm chart for Dapr Emmy service.
+name: dapr_emmy
 version: '0.0.0'
