--- a/charts/dapr/charts/dapr_emmy/templates/dapr_emmy_service.yaml
+++ b/charts/dapr/charts/dapr_emmy/templates/dapr_emmy_service.yaml
@@ -1,8 +1,8 @@
-{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.serviceName emmy) }}
+{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.serviceName "emmy") }}
 kind: Service
 apiVersion: v1
 metadata:
-  name: dapr-actors
+  name: dapr-emmy
   namespace: {{ .Release.Namespace }}
   labels:
     {{- range $key, $value := .Values.global.k8sLabels }}
@@ -10,7 +10,7 @@ metadata:
     {{- end }}
 spec:
   selector:
-    app: dapr-actors
+    app: dapr-emmy
   ports:
     - protocol: TCP
       port: {{ .Values.ports.port }} 
