--- a/charts/dapr/charts/dapr_emmy/values.yaml
+++ b/charts/dapr/charts/dapr_emmy/values.yaml
@@ -1,12 +1,12 @@
 replicaCount: 1
 logLevel: info
-component: actors
+component: emmy
 
-# Override this to use a custom actors service image.
+# Override this to use a custom emmy service image.
 # If the image name contains a "/", it is assumed to be a full docker image name, including the registry url and tag.
 # Otherwise, the helm chart will use {{ .Values.global.registry }}/{{ .Values.image.name }}:{{ .Values.global.tag }}
 image:
-  name: "actors"
+  name: "emmy"
 
 nameOverride: ""
 fullnameOverride: ""
