--- a/charts/dapr/charts/dapr_emmy/templates/dapr_emmy_deployment.yaml
+++ b/charts/dapr/charts/dapr_emmy/templates/dapr_emmy_deployment.yaml
@@ -29,7 +29,7 @@ spec:
           {{- toYaml . | nindent 8 }}
         {{- end }}
       annotations:
-        dapr.io/control-plane: actors
+        dapr.io/control-plane: emmy
 {{- if eq .Values.global.prometheus.enabled true }}
         prometheus.io/scrape: "{{ .Values.global.prometheus.enabled }}"
         prometheus.io/port: "{{ .Values.global.prometheus.port }}"
