--- a/.github/workflows/dapr.yml
+++ b/.github/workflows/dapr.yml
@@ -271,12 +271,6 @@ jobs:
         with:
           name: dapr_${{ matrix.target_os }}_${{ matrix.target_arch }}_${{ matrix.sidecar_flavor }}
           path: ${{ env.ARCHIVE_OUTDIR }}
-      - name: upload artifacts - grafana dashboards
-        if: matrix.target_arch == 'amd64' && matrix.target_os == 'linux' && matrix.sidecar_flavor == 'allcomponents'
-        uses: actions/upload-artifact@v3
-        with:
-          name: dapr_grafana_dashboards
-          path: ./grafana/*.json
       - name: Docker Hub Login
         if: matrix.target_os != 'darwin' && github.event_name != 'pull_request' && env.DOCKER_REGISTRY_ID != ''
         uses: docker/login-action@v3
@@ -349,29 +343,24 @@ jobs:
           # Lowercase the value
           echo "REPO_OWNER=${REPO_OWNER,,}" >>${GITHUB_ENV}
       - name: "download artifact: dapr_linux_amd64_allcomponents"
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v4
         with:
           name: dapr_linux_amd64_allcomponents
           path: ${{ env.ARTIFACT_DIR }}
       - name: "download artifact: dapr_linux_arm_allcomponents"
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v4
         with:
           name: dapr_linux_arm_allcomponents
           path: ${{ env.ARTIFACT_DIR }}
       - name: "download artifact: dapr_linux_arm64_allcomponents"
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v4
         with:
           name: dapr_linux_arm64_allcomponents
           path: ${{ env.ARTIFACT_DIR }}
       - name: "download artifact: dapr_windows_amd64_allcomponents"
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v4
         with:
           name: dapr_windows_amd64_allcomponents
-          path: ${{ env.ARTIFACT_DIR }}
-      - name: "download artifact: dapr_grafana_dashboards"
-        uses: actions/download-artifact@master
-        with:
-          name: dapr_grafana_dashboards
           path: ${{ env.ARTIFACT_DIR }}
       - name: generate checksum files
         run: cd ${ARTIFACT_DIR} && for i in *; do sha256sum -b $i > "$i.sha256"; done && cd -
